# tieteellinen_laskin

./: .coverage  .gitignore  .pylintrc  .travis.yml  README.md  pyproject.toml  shunting_yard.py  tasks.py
.circleci/: config.yml
dokumentaatio/: kayttoohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
src/: calculator.py  index.py  input_handler.py  kpn.py  rpn.py
src/services/: calculator.py  input_handler.py  input_stack.py  rpn.py  variable.py  variable_handler.py
src/tests/: calculator_test.py  input_handler_test.py  kpn_test.py  rpn_test.py
src/tests/services/: calculator_test.py  input_handler_test.py  input_stack_test.py  rpn_test.py  variable_handler_test.py  variable_test.py
src/ui/: ui.py
viikkoraportit/: viikko_1.md  viikko_2.md  viikko_3.md  viikko_4.md  viikko_5.md  viikko_6.md
